# Roboroca

./: .dockerignore  .env.example  .gitignore  AUDITORIA.md  AUDITORIA_FINAL.md  BUGS_PENDENTES.md  CONTRIBUTING.md  ENDPOINTS_ADDED.md  FASE3_PLANO.md  FASE4_PLANO.md  PLANEJAMENTO.md  PLANO_CORRECAO.md  PLANO_QUINTA.md  README.md  RELATORIO_AUDITORIA_CARLOS.md  RELATORIO_BUGS.md  RESULTADOS_TESTES_CARLOS.json  RESULTADO_TESTES.md  ROADMAP.md  TESTE_MANUAL.md  copiar-dados.ps1  copiar-roboroca.ps1  create_test_user.py  docker-compose.prod.yml  docker-compose.yml  format-pendrive.txt  preparar-pendrive.ps1  pyproject.toml  requirements.txt  run_full_test.py  setup-novo-pc.ps1  start-backend.bat  start-frontend.bat  teste_manual_carlos.py
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: __init__.py  main.py  requirements.txt
backend/api/: __init__.py
backend/api/dependencies/: __init__.py  auth.py
backend/api/routes/: analysis.py  annotations.py  api_keys.py  auth.py  health.py  images.py  projects.py  websocket.py
backend/api/schemas/: __init__.py  analysis.py  image.py  project.py  user.py
backend/core/: __init__.py  api_keys.py  config.py  database.py  logging_config.py  rate_limit.py  security.py
backend/models/: __init__.py  analysis.py  annotation.py  api_key.py  image.py  project.py  user.py
backend/modules/: __init__.py
backend/modules/aerial/: __init__.py  router.py  schemas.py  service.py
backend/modules/calculator/: __init__.py  models.py  router.py  schemas.py
backend/modules/equipment/: __init__.py  models.py  router.py  schemas.py  seed.py
backend/modules/precision/: __init__.py  models.py  router.py  schemas.py
backend/modules/spectral/: __init__.py  models.py  router.py  schemas.py  spectrum_processor.py
backend/services/: email.py  metrics.py
backend/services/geo/: __init__.py  clustering.py  utm_converter.py
backend/services/image_processing/: __init__.py  analyzer.py  processor.py  reader.py  roi_masker.py  video.py
backend/services/ml/: __init__.py  biomass_estimator.py  classifier.py  detector.py  feature_extractor.py  pest_detector.py  segmenter.py  tree_counter.py  video_analyzer.py
backend/services/report_generation/: __init__.py  pdf_generator.py
backend/tests/: conftest.py  test_analysis.py  test_annotations_export.py  test_auth.py  test_auth_extended.py  test_dashboard.py  test_images.py  test_projects.py  test_roi.py  test_security.py  test_utm.py
backend/utils/: files.py
deploy/: deploy.sh  setup-droplet.sh
docker/: Dockerfile.backend  Dockerfile.celery  Dockerfile.frontend  Dockerfile.satellite  backup.sh  nginx.conf  nginx.conf.template
frontend/: .eslintrc.json  jest.config.ts  jest.setup.ts  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.jest.json
frontend/e2e/: auth.spec.ts  project-flow.spec.ts
frontend/public/: manifest.json  sw.js
frontend/src/app/: globals.css  layout.tsx  mobile.css  not-found.tsx  page.tsx
frontend/src/app/reset-password/: page.tsx
frontend/src/components/: AnalysisComparison.tsx  AnalysisResults.tsx  AuthScreen.tsx  Charts.tsx  ConfirmDialog.tsx  CoordinateCapture.tsx  EcosystemNav.tsx  EmptyState.tsx  Header.tsx  ImageAnalysisPanel.tsx  LandingPage.tsx  MapView.tsx  MobileMenu.tsx  NotificationContext.tsx  Onboarding.tsx  PerimeterEditor.tsx  ProjectComparison.tsx  ProjectEditModal.tsx  ProjectProfile.tsx  ProjectsList.tsx  Providers.tsx  SettingsPage.tsx  Sidebar.tsx  Skeleton.tsx  StatCard.tsx  Toast.tsx  Tooltip.tsx  UploadZone.tsx  index.ts
frontend/src/components/MapView/: DrawingTools.tsx  MapControls.tsx  MapLayers.tsx  MapPopups.tsx  MapSidebar.tsx  index.tsx  types.ts
frontend/src/components/ProjectProfile/: AnalysisTab.tsx  MapTab.tsx  OverviewTab.tsx  ReportTab.tsx  (+2 more)
frontend/src/lib/: api.ts  i18n.tsx  useAnalysisProgress.ts
frontend/src/locales/: en-US.json  es.json  pt-BR.json
frontend/test-results/: .last-run.json
(+17 files in other folders)
