[project]
name = "roboroca"
version = "0.1.0"
description = "Sistema inteligente de análise de imagens aéreas para agricultura - Identificação de plantas, áreas, produtividade e mais"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Roboroça Team"}
]
keywords = ["agriculture", "satellite", "drone", "image-analysis", "machine-learning", "gis", "plant-detection", "crop-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",

    # Database
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.19.0",
    "geoalchemy2>=0.14.3",

    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "passlib[argon2]>=1.7.4",
    "argon2-cffi>=23.1.0",

    # Task Queue
    "celery[redis]>=5.3.6",

    # Geospatial Processing
    "rasterio>=1.3.9",
    "geopandas>=0.14.2",
    "shapely>=2.0.2",
    "pyproj>=3.6.1",
    "rio-tiler>=6.2.10",

    # Image Processing
    "numpy>=1.26.3",
    "opencv-python-headless>=4.9.0.80",
    "pillow>=10.2.0",

    # Machine Learning
    "torch>=2.1.2",
    "torchvision>=0.16.2",
    "segmentation-models-pytorch>=0.3.3",
    "albumentations>=1.3.1",
    "ultralytics>=8.0.0",

    # Utils
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "boto3>=1.34.14",

    # Report Generation
    "reportlab>=4.0.0",
    "jinja2>=3.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.1.11",
    "black>=23.12.1",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

notebooks = [
    "jupyter>=1.0.0",
    "matplotlib>=3.8.2",
    "seaborn>=0.13.1",
]

[project.urls]
Homepage = "https://github.com/seu-usuario/roboroca"
Documentation = "https://github.com/seu-usuario/roboroca#readme"
Repository = "https://github.com/seu-usuario/roboroca"
Issues = "https://github.com/seu-usuario/roboroca/issues"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

# -----------------
# Ruff (Linter)
# -----------------
[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["backend"]

# -----------------
# Black (Formatter)
# -----------------
[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
)/
'''

# -----------------
# Pytest
# -----------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

# -----------------
# MyPy
# -----------------
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
